--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Authors, English -- 19th century -- Biography'
 - !lcsh 'Women authors, English -- Biography'
+- GITenberg
 title: 'Mrs. Hungerford
 
   Notable Women Authors of the Day'
